--- a/index.html
+++ b/index.html
@@ -4,33 +4,129 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
-
+    <script src="https://kit.fontawesome.com/9005dcba97.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap"
+      rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
     <title>Frontend Mentor | [Blogr]</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
 
   <body>
 
+    <input type="checkbox" name="mobile-nav" id="mobile-nav-button" hidden>
+    <div class="mobile-button-container">
+      <label for="mobile-nav-button" class="mobile-nav__button">
+        <img src="images/icon-hamburger.svg" alt="Mobile navigation icon">
+      </label>
+    </div>
 
+    <nav class="mobile-nav">
+      <ul class="mobile-nav__top">
+        <li class="mobile-nav__item">
+          <input type="radio" name="mobile-nav" id="product" hidden>
+          <label for="product">Product <i class="fas fa-chevron-down mobile-nav__item-icon"></i></label>
+          <ul class="mobile-nav__dropdown__list">
+            <li class="mobile-nav__dropdown__list-item">Overview</li>
+            <li class="mobile-nav__dropdown__list-item">Pricing</li>
+            <li class="mobile-nav__dropdown__list-item">Marketplace</li>
+            <li class="mobile-nav__dropdown__list-item">Features</li>
+            <li class="mobile-nav__dropdown__list-item">Integrations</li>
+          </ul>
+        </li>
+        <li class="mobile-nav__item">
+          <input type="radio" name="mobile-nav" id="company" hidden>
+          <label for="company">Company <i class="fas fa-chevron-down mobile-nav__item-icon"></i></label>
+          <ul class="mobile-nav__dropdown__list">
+            <li class="mobile-nav__dropdown__list-item">About</li>
+            <li class="mobile-nav__dropdown__list-item">Team</li>
+            <li class="mobile-nav__dropdown__list-item">Blog</li>
+            <li class="mobile-nav__dropdown__list-item">Careers</li>
+          </ul>
+        </li>
+        <li class="mobile-nav__item">
+          <input type="radio" name="mobile-nav" id="connect" hidden>
+          <label for="connect">Connect <i class="fas fa-chevron-down mobile-nav__item-icon"></i></label>
+          <ul class="mobile-nav__dropdown__list">
+            <li class="mobile-nav__dropdown__list-item">Contact</li>
+            <li class="mobile-nav__dropdown__list-item">Newsletter</li>
+            <li class="mobile-nav__dropdown__list-item">LinkedIn</li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="mobile-nav__bottom">
+        <li class="mobile-nav__item">Login</li>
+        <li class="mobile-nav__item"><a href="#" class="btn btn--fill-reverse">Sign Up</a></li>
+      </ul>
+    </nav>
 
-    <div class="attribution">
+    <header class="header">
+      <img src="images/bg-pattern-intro.svg" alt="Background Image" class="header__image">
+
+      <nav class="nav">
+        <div class="nav__right">
+          <p class="nav__heading">Blogr</p>
+          <ul class="nav__links">
+            <li class="nav__link dropdown">
+              Product <i class="fas fa-chevron-down nav__link-icon"></i>
+              <div class="dropdown__content">
+                <ul class="dropdown__list">
+                  <li class="dropdown__list-item">Overview</li>
+                  <li class="dropdown__list-item">Pricing</li>
+                  <li class="dropdown__list-item">Marketplace</li>
+                  <li class="dropdown__list-item">Features</li>
+                  <li class="dropdown__list-item">Integrations</li>
+                </ul>
+              </div>
+            </li>
+            <li class="nav__link dropdown">
+              Company <i class="fas fa-chevron-down nav__link-icon"></i>
+              <div class="dropdown__content">
+                <ul class="dropdown__list">
+                  <li class="dropdown__list-item">About</li>
+                  <li class="dropdown__list-item">Team</li>
+                  <li class="dropdown__list-item">Blog</li>
+                  <li class="dropdown__list-item">Careers</li>
+                </ul>
+              </div>
+            </li>
+            <li class="nav__link dropdown">
+              Connect <i class="fas fa-chevron-down nav__link-icon"></i>
+              <div class="dropdown__content">
+                <ul class="dropdown__list">
+                  <li class="dropdown__list-item">Contact</li>
+                  <li class="dropdown__list-item">Newsletter</li>
+                  <li class="dropdown__list-item">LinkedIn</li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="nav__left">
+          <ul class="nav__links">
+            <li class="nav__link">Login</li>
+            <li class="nav__link"><a href="#" class="btn btn--fill">Sign Up</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="header__content">
+        <h1 class="header-heading">A modern publishing platform</h1>
+        <p class="header-subheading">Grow your audience and build your online brand</p>
+
+        <div class="header__buttons">
+          <a href="#" class="btn btn--fill margin-right-small">Start for Free</a>
+          <a href="#" class="btn btn--outline">Learn More</a>
+        </div>
+      </div>
+    </header>
+
+    <!-- <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
   </body>
 
 </html>
