completed future section on mobile & desktop design

--- a/index.html
+++ b/index.html
@@ -123,6 +123,38 @@
       </div>
     </header>
 
+    <main class="main">
+      <section class="section-design">
+        <div class="center-text margin-bottom-large">
+          <h2 class="heading-secondary">Designed for the future</h2>
+        </div>
+        <div class="section-design__content">
+          <div class="section-design__right">
+            <h3 class="heading-tertiary">Introducing an extensible editor</h3>
+            <p class="body-text">
+              Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content.
+              The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
+              videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
+              change the looks of a blog.
+            </p>
+
+            <h3 class="heading-tertiary">Robust content management</h3>
+            <p class="body-text">
+              Flexible content management enables users to easily move through posts. Increase the usability of your
+              blog
+              by adding customized categories, sections, format, or flow. With this functionality, you’re in full
+              control.
+            </p>
+          </div>
+          <div class="section-design__left"></div>
+        </div>
+      </section>
+
+      <section class="section-art">
+
+      </section>
+    </main>
+
     <!-- <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
