--- a/index.html
+++ b/index.html
@@ -151,7 +151,16 @@
       </section>
 
       <section class="section-art">
-
+        <div class="section-art__left">
+          <img src="images/illustration-phones.svg" alt="Phone Image" class="section-art__image">
+        </div>
+        <div class="section-art__right">
+          <h2 class="heading-secondary heading-secondary--white">State of the Art Infrastructure</h2>
+          <p class="body-text body-text--white">
+            With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
+            This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+          </p>
+        </div>
       </section>
     </main>
 
