added close icon on mobile navigation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <input type="checkbox" name="mobile-nav" id="mobile-nav-button" hidden>
     <div class="mobile-button-container">
       <label for="mobile-nav-button" class="mobile-nav__button">
-        <img src="images/icon-hamburger.svg" alt="Mobile navigation icon">
+        <img src="images/icon-hamburger.svg" alt="Mobile navigation open icon" class="mobile-nav__button--open">
+        <img src="images/icon-close.svg" alt="Mobile navigation close icon" class="mobile-nav__button--close">
       </label>
     </div>
 
